--- a/spring-boot-example/B.features/i18n/pom.xml
+++ b/spring-boot-example/B.features/i18n/pom.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rabbitmq-consumer-demo</artifactId>
-    <name>rabbitmq-consumer-demo</name>
-    <description>rabbitmq消费者示例</description>
+    <artifactId>i18n</artifactId>
+    <name>i18n</name>
+    <description>Spring Boot 本地化</description>
 
     <parent>
-        <artifactId>rabbitmq-integration-demo</artifactId>
+        <artifactId>B.features</artifactId>
         <groupId>com.example</groupId>
-        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
+        <version>${revision}</version>
     </parent>
 
     <dependencies>
         <dependency>
+            <artifactId>spring-boot-starter-web</artifactId>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
         <dependency>
+            <artifactId>spring-boot-starter-validation</artifactId>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit-test</artifactId>
-            <scope>test</scope>
+            <artifactId>lombok</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
             </plugin>
         </plugins>
     </build>
